PMforce/src/objects/Question_Option__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Main__c</fullName>
        <label>Feedback Main</label>
        <referenceTo>Feedback_Main__c</referenceTo>
        <relationshipLabel>Question Option</relationshipLabel>
        <relationshipName>Question_Option</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Question__c</fullName>
        <label>Related Question</label>
        <referenceTo>Feedback_Question_Main__c</referenceTo>
        <relationshipLabel>Question Option</relationshipLabel>
        <relationshipName>Question_Option</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Radio__c</fullName>
        <label>Response Radio</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Slider__c</fullName>
        <label>Response Slider</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <label>Question Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QOP-{0000}</displayFormat>
        <label>Question Options Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Option</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>